# kibitzer

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/kibitzer/events/: __init__.py  game_imported.py
src/kibitzer/game_fetcher/: __main__.py  parser.py  producer.py
tests/events/: test_game_imported.py
tests/fixtures/: sample_game.json
tests/game_fetcher/: test_parser.py  test_producer.py
