[tool.poetry]
name = "kibitzer"
version = "0.0.1"
description = "Stockfish and an LLM, arguing about your chess, every Monday morning."
include = ["src/kibitzer/py.typed"]
authors = ["Kibitzer <noreply@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kibitzer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"
requests = "^2.33.1"
confluent-kafka = "^2.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.7"
mypy = "^1.13"
types-requests = "^2.33.0.20260408"
testcontainers = {extras = ["kafka"], version = "^4.14.2"}

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "PT"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["kibitzer", "tests"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
